[metadata]
name = protocol_backup 
version = attr: protocol_backup.__version__
author = Gerard 
author_email = gweatherby@uchc.edu 
description = Manage python packages on Ubuntu20 systems 
#long_description = file: README.md
#long_description_content_type = text/markdown
license = MIT license 

[options]
#include_package_data = True
package_dir = 
	= src
packages = 
	protocol_backup
install_requires =
	requests
	pyyaml

[options.entry_points]
console_scripts = 
	protocol_backup = protocol_backup.main:main 

[build_ext]
debug = 1

#[options.package_data]
#example = data/schema.json, *.txt
#* = README.md

